aws_vpc_secZone.tf
########################################
# BUILDING THE VPC FOR THE ENVIRONMENT #
########################################

resource "aws_vpc" "terraform-vpc-securityZone" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_support   = "true"
  enable_dns_hostnames = "true"
  #enable_classiclink   = "false"

  tags = {
    Owner = var.resourceOwner
    Name = "terraform_${var.projectPrefix}"
  }
}

resource "aws_default_security_group" "default" {
  vpc_id = aws_vpc.terraform-vpc-securityZone.id
  tags = {
    Owner = var.resourceOwner
  }
}

#################################################
# BUILDING SUBNETS FOR VPC IN TWO DIFFERENT AZ'S#
#################################################

resource "aws_subnet" "f5-management-a" {
  vpc_id                  = aws_vpc.terraform-vpc-securityZone.id
  cidr_block              = "10.0.101.0/24"
  map_public_ip_on_launch = "false"
  availability_zone       = "${var.aws_region}a"

  tags = {
    Owner = var.resourceOwner
    Name = "terraform_management-a_${var.projectPrefix}"
  }
}

resource "aws_subnet" "f5-management-b" {
  vpc_id                  = aws_vpc.terraform-vpc-securityZone.id
  cidr_block              = "10.0.102.0/24"
  map_public_ip_on_launch = "false"
  availability_zone       = "${var.aws_region}b"

  tags = {
    Owner = var.resourceOwner
    Name = "terraform_management-b_${var.projectPrefix}"
  }
}

resource "aws_subnet" "public-a" {
  vpc_id                  = aws_vpc.terraform-vpc-securityZone.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = "false"
  availability_zone       = "${var.aws_region}a"

  tags = {
    Owner = var.resourceOwner
    Name = "terraform_public-a_${var.projectPrefix}"
  }
}

resource "aws_subnet" "public-b" {
  vpc_id                  = aws_vpc.terraform-vpc-securityZone.id
  cidr_block              = "10.0.2.0/24"
  map_public_ip_on_launch = "false"
  availability_zone       = "${var.aws_region}b"

  tags = {
    Owner = var.resourceOwner
    Name = "terraform_public-b_${var.projectPrefix}"
  }
}

resource "aws_subnet" "private-a" {
  vpc_id                  = aws_vpc.terraform-vpc-securityZone.id
  cidr_block              = "10.0.100.0/24"
  map_public_ip_on_launch = "false"
  availability_zone       = "${var.aws_region}a"

  tags = {
    Owner = var.resourceOwner
    Name = "terraform_private-a_${var.projectPrefix}"
  }
}

resource "aws_subnet" "private-b" {
  vpc_id                  = aws_vpc.terraform-vpc-securityZone.id
  cidr_block              = "10.0.200.0/24"
  map_public_ip_on_launch = "false"
  availability_zone       = "${var.aws_region}b"

  tags = {
    Owner = var.resourceOwner
    Name = "terraform_private-b_${var.projectPrefix}"
  }
}

######################################
# BUILDING INTERNET GATEWAY & ROUTING#
######################################

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.terraform-vpc-securityZone.id

  tags = {
    Owner = var.resourceOwner
    Name = "terraform_internet-gateway_${var.projectPrefix}"
  }
}

resource "aws_route_table" "rt1" {
  vpc_id = aws_vpc.terraform-vpc-securityZone.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Owner = "leonardo.simon@f5.com"
    Name = "terraform_default_route_${var.projectPrefix}"
  }
}

resource "aws_main_route_table_association" "association-subnet" {
  vpc_id         = aws_vpc.terraform-vpc-securityZone.id
  route_table_id = aws_route_table.rt1.id
}
